# cubic

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile_  a  cmake_install.cmake  cubic_utils.h  glad.c  imgui.ini  main  main.cpp  makefile_  readme.md  run.sh  shared.h
include/: basic_solver.h  cube.h  cubic.h  generic_solver.h  pch.h  rectangle.h  shader.h  solver.h  stb_image.h  utils.h
include/glad/: glad.h
shader/: 2d.shader  default.shader  white.shader
